--- a/Happy Birthday_files/style.css
+++ b/Happy Birthday_files/style.css
@@ -59,7 +59,7 @@
 }
 
 body {
-    background-color: #FFDAB9;
+    background-color: #a2b0ff;
 }
 
 img {
@@ -76,7 +76,7 @@ img {
 .area {
     text-align: center;
     font-size: 70px;
-    color: #C4515C;
+    color: #5159c4;
     letter-spacing: -7px;
     font-weight: 700;
     text-transform: uppercase;
@@ -114,5 +114,5 @@ img {
 
 .type-wrap {
     font-size: 25px;
-    color: #C4515C;
+    color: #ffffff;
 }
