--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
 }
 
 body {
-    background-color: #FFDAB9;
+    background-color: #a6acdd;
 }
 
 img {
@@ -76,7 +76,7 @@ img {
 .area {
     text-align: center;
     font-size: 70px;
-    color: #C4515C;
+    color: #5166c4;
     letter-spacing: -7px;
     font-weight: 700;
     text-transform: uppercase;
